# twits-notify

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/api/: Dockerfile  consts.py  db_manager.py  main.py  metrics.py  models.py  producer.py  reddit.py  requirements.txt  routes.py
backend/consumer/: Dockerfile  consts.py  consumer_instance.py  db_manager.py  llm.py  main.py  requirements.txt
consumer/: consts.py  consumer.py  consumer_instance.py  db_manager.py  llm.py  main.py  prompt.py
core/: consts.py  reddit.py  twitter_client.py
db/init/: 01-create-tables.sql
grafana/provisioning/dashboards/: dashboard.yaml  reddit_analysis.json
grafana/provisioning/datasources/: prometheus.yaml
notebooks/: tweet.ipynb
prometheus/: prometheus.yml
tests/: conftest.py
tests/api/: test_db_manager_read.py  test_metrics.py  test_producer.py  test_reddit.py  test_routes.py
tests/consumer/: conftest.py  test_consumer_instance.py  test_db_manager.py  test_llm.py
