[project]
name = "twits-notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.7",
    "litellm>=1.59.8",
    "pandas>=2.2.3",
    "pika>=1.3.2",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
